--- a/config/cambridge-backend-dev.env
+++ b/config/cambridge-backend-dev.env
@@ -1,5 +1,5 @@
 # Database Properties
-DATA_SOURCE_URL=jdbc:postgresql://localhost:5432/springSecurity
+DATA_SOURCE_URL=jdbc:postgresql://localhost:5432/pharmaSync
 
 # JWT Properties
 JWT_EXPIRY=60000
