--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=healthcare
-# Database connection properties
-spring.datasource.url=${DATA_SOURCE_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Read database configuration
+spring.datasource.read.url=${DATA_SOURCE_URL}
+spring.datasource.read.username=${DB_USER:postgres}
+spring.datasource.read.password=${DB_PASSWORD:postgres}
+spring.datasource.read.driver-class-name=org.postgresql.Driver
+
+# Write database configuration
+spring.datasource.write.url=${DATA_SOURCE_URL}
+spring.datasource.write.username=${DB_USER:postgres}
+spring.datasource.write.password=${DB_PASSWORD:postgres}
+spring.datasource.write.driver-class-name=org.postgresql.Driver
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
@@ -21,3 +28,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 application.security.jwt.secret-key=${JWT_SECRET}
 application.security.jwt.expiration=${JWT_EXPIRY}
 application.security.jwt.refresh-token.expiration=${JWT_REFRESH_EXPIRY}
+
+
