get all patient functioned completed

--- a/config/cambridge-backend-dev.env
+++ b/config/cambridge-backend-dev.env
@@ -2,5 +2,5 @@
 DATA_SOURCE_URL=jdbc:postgresql://localhost:5432/pharmaSync
 
 # JWT Properties
-JWT_EXPIRY=60000
-JWT_REFRESH_EXPIRY=300000
+JWT_EXPIRY=86400000
+JWT_REFRESH_EXPIRY=86400000
